force-app/main/default/objects/Sales_Agent__c/fields/Completed_Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>Completed_Commission_Amount__c</fullName>
    <label>Completed Commission Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>