force-app/main/default/objects/Sales_Agent__c/fields/Default_Rate__c.field-meta.xml
<CustomField>
    <fullName>Default_Rate__c</fullName>
    <label>Default Rate</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>