force-app/main/default/objects/Sales_Agent__c/fields/Pending_Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>Pending_Commission_Amount__c</fullName>
    <label>Pending Commission Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>