force-app/main/default/objects/Sales_Agent__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Completed_Commission_Amount__c</columns>
    <columns>Pending_Commission_Amount__c</columns>
    <columns>Default_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>